<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:backgroundTint="@color/blue"
    card_view:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_epi_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/name"
                android:textColor="@color/cream"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_epi_air_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_date"
                android:textColor="@color/cream"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_epi_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episodes"
            android:textColor="@color/cream" />
    </LinearLayout>

</androidx.cardview.widget.CardView>